Finishing touches. Part I.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
-
+    <title>Joshua James Head: Professional Web Services</title>
+    <link rel="icon" href="img/portfolio/fullsize/favicon.ico" type="image/x-icon">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
   </head>
 
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Joshua James Head</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your Favorite Source of Free Bootstrap Themes</strong>
+              <strong>Need a new website?</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="text-faded mb-5">I build beautiful, modern websites fully customized and ready to take your company, service, or product to the next level.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -74,12 +74,19 @@
     <section class="bg-primary" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
-            <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <div class="col-md-5 mx-auto text-center" style="display: flex; align-items: center; padding: 0 2rem 2rem 2rem;">
+            <img class="img-fluid mx-auto" style="opacity: 0.8; display: flex; align-items: center;" src="img/portfolio/fullsize/hijosh.png" alt="">
           </div>
+          <div class="col-md-6 mx-auto">
+            <h1 class="section-heading text-white text-uppercase text-center">HI, I'M JOSH!</h2>
+            <hr class="light my-4">
+            <p class="section-heading text-white text-uppercase text-center">Web Developer || Web Designer || User Experience Designer</h3>
+            <p class="text-faded mb-4">I'm passionate about helping both start-ups and established companies meet all their website design and development needs. I know exactly how to style your website in order to minimize page load times and maximize user experience. Each website I design comes fully responsive for a beautiful and effective experience across all devices.</p>
+            <div class="text-center">
+              <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -95,126 +102,134 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-desktop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Customization</h3>
+              <p class="text-muted mb-0">Have a mock-up of exactly what you want me to build? Great, we can do that. Don't have any idea where to start? That's fine, too. I can help you design the website best fitted to your needs.</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-cogs text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Communication</h3>
+              <p class="text-muted mb-0">You can provide feedback every step of the way, and even after the final product! The most important outcome is that the final website meets your needs and exceeds your expectations.</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-wordpress text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Integration</h3>
+              <p class="text-muted mb-0">Already have a preferred web host or CMS provider? We can integrate your website into the popular platform of your choose, such as Wordpress or Webflow.</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-briefcase text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">Professionalism</h3>
+              <p class="text-muted mb-0">I put my best work into each and every site I build for a client. Every minor incremental improvement magnifies into a major difference in driving traffic to your site. </p>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+    <section class="p-0 bg-light" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading" id="portfolio-heading">Recent Projects</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters popup-gallery" style="padding-bottom: 2rem;">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/colmaracademy.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/colmaracademy.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Colmar Academy
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I was tasked with designing and creating the landing page for a new school.
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/jumpstart.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/jumpstart.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Jumpstart
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I designed and launched a landing page for a local start-up looking to boost sales by establishing an online presence.
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/trackster.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/trackster.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Trackster
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I developed and designed the interface for a web app that utilizes the Spotify API.
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/matchgame.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/matchgame.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Match Game
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I was tasked with developing a 4x4 match game using JavaScript.
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/secretagent.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/secretagent.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Secret Agent Supply
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I designed and launched an online store for a specialty store that ships worldwide.
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/tortoiseoptics.jpg">
+              <img class="img-fluid" src="img/portfolio/fullsize/tortoiseoptics.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Tortoiseshell Optics
                   </div>
                   <div class="project-name">
-                    Project Name
+                    I built a landing page for a company that wanted to sell and make reservations online.
                   </div>
                 </div>
               </div>
@@ -224,11 +239,20 @@
       </div>
     </section>
 
-    <section class="bg-dark text-white">
+    <section class="bg-dark text-white" id="quote">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <div class="row">
+          <div class="col-md-6" style="display: flex; align-items: center; justify-content: center;">
+            <div style="padding-bottom: 1rem;">
+        <h2 class="mb-4">Ready to get started?</h2>
+        <a class="btn btn-light btn-xl sr-button js-scroll-trigger text-center" href=#contact>Get a free price quote</a>
+            </div>
+        </div>
+        <div class="col-md-5 mx-auto text-center" style="display: flex; align-items: center; padding: 0 2rem 2rem 2rem;">
+          <img id="quote-pic" class="img-fluid mx-auto" style="opacity: 0.8; align-items: center;" src="img/portfolio/fullsize/get-started.jpg" alt="">
+        </div>
       </div>
+    </div>
     </section>
 
     <section id="contact">
@@ -237,23 +261,74 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Ready to leave all your worrying to me? That's great! Drop me a line and I'll get back to you within 24 hours!</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <a style="color: black;" href="mailto:joshuajameshead@gmail.com>"<i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i></a>
+            <p>
+              <a href="mailto:joshuajameshead@gmail.com">joshuajameshead@gmail.com</a>
+            </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
-            <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
-            </p>
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>(907) 312-6433</p>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- Connect with me section -->
+  <div class="container-fluid bg-light">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center" style="padding-top: 4rem">
+        <h2 class="section-heading">Stay Connected</h2>
+        <hr class="my-4">
+      </div>
+    </div>
+    <!-- 1x3 Bootstrap grid for contact icons, with multiple column sizes for different breakpoints -->
+    <div class="row" style="padding-bottom: 4rem;">
+      <!-- LinkedIn Column-->
+      <div class="col-lg-3 col-sm-6">
+        <div class="contact text-center">
+          <a target="_blank" href="https://instagram.com/joshuajameshead" >
+            <span aria-hidden="true" class="fa fa-instagram fa-3x" ></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- Twitter Column -->
+      <div class="col-sm-6 col-lg-3">
+        <div class="contact text-center">
+          <a href="https://twitter.com/joshuajameshead" >
+            <span aria-hidden="true" class="fa fa-twitter fa-3x text-center"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- GitHub Column -->
+      <div class="col-sm-6 col-lg-3">
+        <div class="contact text-center">
+          <a href="https://github.com/joshuajameshead" >
+            <span aria-hidden="true" class="fa fa-github fa-3x text-center"></span>
+          </a>
+        </div>
+      </div>
+
+      <!-- Email Column-->
+      <div class="col-sm-6 col-lg-3">
+        <div class="contact text-center">
+          <a href="mailto:joshuajameshead@gmail.com" >
+            <span aria-hidden="true" class="fa fa-envelope fa-3x" ></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Footer -->
+<footer class="text-center bg-dark text-white">Copyright &copy; 2018 Joshua James Head. All rights reserved.</footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
