--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Colmar Academy
+              </div>
+              <div>
+                I was tasked with designing and creating the landing page for a new school.
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/jumpstart.jpg">
@@ -174,6 +182,14 @@
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Jumpstart
+              </div>
+              <div>
+                I designed and launched a landing page for a local start-up looking to boost sales by establishing an online presence.
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/trackster.jpg">
@@ -189,6 +205,14 @@
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Trackster
+              </div>
+              <div>
+                I developed and designed the interface for a web app that utilizes the Spotify API.
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/matchgame.jpg">
@@ -204,6 +228,14 @@
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Match Game
+              </div>
+              <div>
+                I was tasked with developing a 4x4 match game using JavaScript.
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/secretagent.jpg">
@@ -219,6 +251,14 @@
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Secret Agent Supply
+              </div>
+              <div>
+                I designed and launched an online store for a specialty store that ships worldwide.
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/tortoiseoptics.jpg">
@@ -229,11 +269,19 @@
                     Tortoiseshell Optics
                   </div>
                   <div class="project-name">
-                    I built a landing page for a company that wanted to sell and make reservations online.
+                    I built a landing page for a company that wanted to sell and make appointment reservations online.
                   </div>
                 </div>
               </div>
             </a>
+            <div id="mobile-only" class="text-center mb-4">
+              <div class="font-weight-bold">
+                Tortoiseshell Optics
+              </div>
+              <div>
+                I built a landing page for a company that wanted to sell and make appointment reservations online.
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -264,18 +312,12 @@
             <p class="mb-5">Ready to leave all your worrying to me? That's great! Drop me a line and I'll get back to you within 24 hours!</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
+          <div class="col-lg-4 m-auto text-center">
             <a style="color: black;" href="mailto:joshuajameshead@gmail.com>"<i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i></a>
             <p>
               <a href="mailto:joshuajameshead@gmail.com">joshuajameshead@gmail.com</a>
             </p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>(907) 312-6433</p>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -301,7 +343,7 @@
       <!-- Twitter Column -->
       <div class="col-sm-6 col-lg-3">
         <div class="contact text-center">
-          <a href="https://twitter.com/joshuajameshead" >
+          <a target="_blank" href="https://twitter.com/joshuajameshead" >
             <span aria-hidden="true" class="fa fa-twitter fa-3x text-center"></span>
           </a>
         </div>
@@ -310,7 +352,7 @@
       <!-- GitHub Column -->
       <div class="col-sm-6 col-lg-3">
         <div class="contact text-center">
-          <a href="https://github.com/joshuajameshead" >
+          <a target="_blank" href="https://github.com/joshuajameshead" >
             <span aria-hidden="true" class="fa fa-github fa-3x text-center"></span>
           </a>
         </div>
