--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to leave all your worrying to me? That's great! Drop me a line and I'll get back to you within 24 hours!</p>
+            <p class="mb-5">Ready to leave all your worrying to me? Drop me a line and I'll get back to you within 24 hours!</p>
           </div>
         </div>
           <div class="col-lg-4 m-auto text-center">
